удалена лишняя пересадка

--- a/index.html
+++ b/index.html
@@ -1066,8 +1066,7 @@
                                                     title="переход на станцию «Волгоградский проспект» Таганско-Краснопресненской линии"></span>
                                             </p>
                                             <p class="single-station"><span class="num">15.&nbsp;</span><span
-                                                    class="name">Дубровка</span><span class="t-icon-metroln ln-10"
-                                                    title="переход на станцию «Кожуховская» Люблинско-Дмитровской линии"></span><span
+                                                    class="name">Дубровка</span><span
                                                     class="t-icon-metroln ln-10"
                                                     title="переход на станцию «Дубровка» Люблинско-Дмитровской линии"></span>
                                             </p>
